--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Dashboard</title>
   </head>
   <body>
-    <div class="container">
+    <div class="main container">
       <div class="sidebar">
         <div class="sidebar-title">
           <img src="" alt="Dashboard Icon" />
