Add a class to main tag

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         </div>
       </header>
 
-      <main>
+      <main class="contents">
         <div class="projects">
           <p class="head-title">Your Projects</p>
           <div class="project container">
