Add link to the img, move footer, add link icon

--- a/index.html
+++ b/index.html
@@ -5,90 +5,110 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./assets/styles/utils.css" />
     <link rel="stylesheet" href="./assets/styles/main.css" />
+    <link rel="icon" href="./assets/images/dashboard.svg" />
     <title>Dashboard</title>
   </head>
   <body>
     <div class="main container">
       <div class="sidebar">
         <div class="sidebar-title">
-          <img src="" alt="Dashboard Icon" />
+          <img src="./assets/images/dashboard.svg" alt="Dashboard Icon" />
           <p>Dashboard</p>
         </div>
 
         <div class="sidebar-menu">
           <div class="menu-item">
-            <img src="" alt="Home Icon" />
+            <img src="./assets/images/home.svg" alt="Home Icon" />
             <p>Home</p>
           </div>
 
           <div class="menu-item">
-            <img src="" alt="Profile Icon" />
+            <img src="./assets/images/profile.svg" alt="Profile Icon" />
             <p>Profile</p>
           </div>
 
           <div class="menu-item">
-            <img src="" alt="Messages Icon" />
+            <img src="./assets/images/messages.svg" alt="Messages Icon" />
             <p>Messages</p>
           </div>
 
           <div class="menu-item">
-            <img src="" alt="History Icon" />
+            <img src="./assets/images/history.svg" alt="History Icon" />
             <p>History</p>
           </div>
 
           <div class="menu-item">
-            <img src="" alt="Tasks Icon" />
+            <img src="./assets/images/tasks.svg" alt="Tasks Icon" />
             <p>Tasks</p>
           </div>
 
           <div class="menu-item">
-            <img src="" alt="Communities Icon" />
+            <img src="./assets/images/communities.svg" alt="Communities Icon" />
             <p>Communities</p>
           </div>
         </div>
 
         <div class="sidebar-others">
           <div class="others-item">
-            <img src="" alt="Settings Icon" />
+            <img src="./assets/images/settings.svg" alt="Settings Icon" />
             <p>Settings</p>
           </div>
 
           <div class="others-item">
-            <img src="" alt="Support Icon" />
+            <img src="./assets/images/support.svg" alt="Support Icon" />
             <p>Support</p>
           </div>
 
           <div class="others-item">
-            <img src="" alt="Privacy Icon" />
+            <img src="./assets/images/privacy.svg" alt="Privacy Icon" />
             <p>Privacy</p>
           </div>
         </div>
+
+        <footer>
+            <p>
+              Copyright ©
+              <span id="currentYear"></span>
+              zen-pb
+            </p>
+            <a href="https://github.com/zen-pb" target="_blank">
+              <img
+                src="./assets/images/github-mark.svg"
+                width="35"
+                height="35"
+                alt="github"
+              />
+            </a>
+          </footer>
       </div>
 
       <header>
         <div class="search">
-          <img src="" alt="Search Icon" />
-          <input type="search" name="" id="" />
+          <img src="./assets/images/search.svg" alt="Search Icon" />
+          <input type="search" name="" id="" placeholder="Search" />
         </div>
 
         <div class="user-account">
-          <img src="" alt="Notification Icon" />
-          <img src="" alt="User Profile Pic" />
-          <p>Edizen Buguina</p>
+          <img src="./assets/images/notification.svg" alt="Notification Icon" />
         </div>
 
         <div class="main-header">
-          <img src="" alt="User Profile Pic" />
+          <img
+            src="./assets/images/zen-pb.svg"
+            width="75"
+            height="75"
+            alt="User Profile Pic"
+          />
           <div class="user-info">
             <p>Hi there,</p>
-            <p>Edizen Buguina (@zen-pb)</p>
+            <p class="user-name">Edizen Buguina (@zen-pb)</p>
           </div>
+        </div>
 
-          <div class="action-btns">
-            <button>New</button>
-            <button>Upload</button>
-            <button>Share</button>
-          </div>
+        <div class="action-btns">
+          <button>New</button>
+          <button>Upload</button>
+          <button>Share</button>
         </div>
       </header>
 
@@ -106,9 +126,9 @@
               </div>
 
               <div class="item-actions">
-                <img src="" alt="Star Icon" />
-                <img src="" alt="Watch Icon" />
-                <img src="" alt="Fork Icon" />
+                <img src="./assets/images/star.svg" alt="Star Icon" />
+                <img src="./assets/images/watch.svg" alt="Watch Icon" />
+                <img src="./assets/images/fork.svg" alt="Fork Icon" />
               </div>
             </div>
 
@@ -124,9 +144,9 @@
               </div>
 
               <div class="item-actions">
-                <img src="" alt="Star Icon" />
-                <img src="" alt="Watch Icon" />
-                <img src="" alt="Fork Icon" />
+                <img src="./assets/images/star.svg" alt="Star Icon" />
+                <img src="./assets/images/watch.svg" alt="Watch Icon" />
+                <img src="./assets/images/fork.svg" alt="Fork Icon" />
               </div>
             </div>
 
@@ -140,9 +160,9 @@
               </div>
 
               <div class="item-actions">
-                <img src="" alt="Star Icon" />
-                <img src="" alt="Watch Icon" />
-                <img src="" alt="Fork Icon" />
+                <img src="./assets/images/star.svg" alt="Star Icon" />
+                <img src="./assets/images/watch.svg" alt="Watch Icon" />
+                <img src="./assets/images/fork.svg" alt="Fork Icon" />
               </div>
             </div>
 
@@ -157,9 +177,9 @@
               </div>
 
               <div class="item-actions">
-                <img src="" alt="Star Icon" />
-                <img src="" alt="Watch Icon" />
-                <img src="" alt="Fork Icon" />
+                <img src="./assets/images/star.svg" alt="Star Icon" />
+                <img src="./assets/images/watch.svg" alt="Watch Icon" />
+                <img src="./assets/images/fork.svg" alt="Fork Icon" />
               </div>
             </div>
 
@@ -173,9 +193,9 @@
               </div>
 
               <div class="item-actions">
-                <img src="" alt="Star Icon" />
-                <img src="" alt="Watch Icon" />
-                <img src="" alt="Fork Icon" />
+                <img src="./assets/images/star.svg" alt="Star Icon" />
+                <img src="./assets/images/watch.svg" alt="Watch Icon" />
+                <img src="./assets/images/fork.svg" alt="Fork Icon" />
               </div>
             </div>
 
@@ -190,15 +210,16 @@
               </div>
 
               <div class="item-actions">
-                <img src="" alt="Star Icon" />
-                <img src="" alt="Watch Icon" />
-                <img src="" alt="Fork Icon" />
+                <img src="./assets/images/star.svg" alt="Star Icon" />
+                <img src="./assets/images/watch.svg" alt="Watch Icon" />
+                <img src="./assets/images/fork.svg" alt="Fork Icon" />
               </div>
             </div>
           </div>
         </div>
 
         <div class="announcements">
+          <p class="head-title">Announcements</p>
           <div class="announcement container">
             <div class="item">
               <div class="item-text">
@@ -234,53 +255,47 @@
         </div>
 
         <div class="trendings">
+          <p class="head-title">Trending</p>
           <div class="trending container">
             <div class="user">
-              <img src="" alt="User Profile Pic" />
+              <img
+                src="./assets/images/jrdfrln-b.svg"
+                width="50"
+                height="50"
+                alt="User Profile Pic"
+              />
               <div class="user-info">
                 <p class="username">@jrdfrln-b</p>
-                <p class="user-project">World Peace Builder</p>
+                <p class="user-project">Unlimited Robux Hack</p>
               </div>
             </div>
             <div class="user">
-              <img src="" alt="User Profile Pic" />
+              <img
+                src="./assets/images/zmcSlow.svg"
+                width="50"
+                height="50"
+                alt="User Profile Pic"
+              />
               <div class="user-info">
                 <p class="username">@zmcSlow</p>
                 <p class="user-project">Super Cool Project</p>
               </div>
             </div>
             <div class="user">
-              <img src="" alt="User Profile Pic" />
+              <img
+                src="./assets/images/zen-pb.svg"
+                width="50"
+                height="50"
+                alt="User Profile Pic"
+              />
               <div class="user-info">
                 <p class="username">@zen-pb</p>
-                <p class="user-project">Life Changing App</p>
-              </div>
-            </div>
-            <div class="user">
-              <img src="" alt="User Profile Pic" />
-              <div class="user-info">
-                <p class="username">@alex</p>
-                <p class="user-project">No Traffic Maker</p>
+                <p class="user-project">Gcash Mod App</p>
               </div>
             </div>
           </div>
         </div>
       </main>
-      <footer>
-        <p>
-          Copyright ©
-          <span id="currentYear"></span>
-          zen-pb
-        </p>
-        <a href="https://github.com/zen-pb" target="_blank">
-          <img
-            src="./assets/images/github-mark.svg"
-            width="35"
-            height="35"
-            alt="github"
-          />
-        </a>
-      </footer>
     </div>
 
     <script>
